--- a/readme
+++ b/readme
@@ -1,3 +1,10 @@
-Kaggle: 
+Kaggle link: 
 https://www.kaggle.com/datasets/dgomonov/new-york-city-airbnb-open-data
 
+Since 2008, guests and hosts have used Airbnb to expand on traveling possibilities and present more unique, personalized way of experiencing the world. This dataset describes the listing activity and metrics in NYC, NY for 2019.
+
+This data analysis is conduct by R. 
+
+To view the data analysis report: 
+1. Download index.html 
+2. View index.html in the browser
